--- a/src/test/resources/lippia.conf
+++ b/src/test/resources/lippia.conf
@@ -2,6 +2,8 @@ environments {
     default {
        "base_url_rickAndMorty" = "https://rickandmortyapi.com/api/"
        "base_url_petstore" = "https://petstore.swagger.io/v2/"
+       "base_url_clockify" = "https://api.clockify.me/api"
+       "x_api_key" = "Mjg0MTIwMGYtMzIwMy00ZTEyLWJlYmMtZjJjNTBlMzdlZjQ5"
     
     }
     
